# AgentPilot

./: README.md  pyproject.toml  requirements.txt  symbols.txt
.agent/rules/: code-style-guide.md  project-overview.md
docs/guides/: modules.md  zzplugins.md
src/: __init__.py  __main__.py
src.system/: apis.py
src/core/connectors/: h5.py  mysql.py  sqlite.py
src/core/daemons/: _youtube.py
src/core/managers/: _logs.py  config.py  daemons.py  modules.py
src/gui/: builder.py  demo.py  main.py  popup.py  style.py  temp.py  util.py
src/gui/bubbles/: assistant_bubble.py  audio_bubble.py  code_bubble.py  image_bubble.py  result_bubble.py  tool_bubble.py  user_bubble.py
src/gui/fields/: boolean.py  button.py  button_toggle.py  color_picker.py  combo.py  file_picker.py  float.py  font.py  image.py  input_source.py  input_target.py  integer.py  member_type_menu.py  model.py  module.py  path_picker.py  popup_button.py  project_type_menu.py  text.py  venv.py
src/gui/highlighters/: _dockerfile.py  json.py  python.py  xml.py
src/gui/pages/: _addons.py  _evals.py  _roles.py  addons.py  agents.py  blocks.py  chat.py  contexts.py  display.py  environments.py  files.py  images.py  models.py  modules.py  projects.py  roles.py  settings.py  system.py  tools.py  videos.py  youtube.py
src/gui/studios/: __init__.py  h5_studio.py  image_studio.py  text_studio.py  video_studio.py
src/gui/widgets/: __init__.py  agent_settings.py  chart_widget.py  code_block_settings.py  config_async_widget.py  config_buttons.py  config_collection.py  config_db_tree.py  config_ext_tree.py  config_fields.py  config_joined.py  config_json_db_tree.py  config_json_tree.py  config_pages.py  config_plugin.py  config_table.py  config_tabs.py  config_tree.py  config_widget.py  file_tree.py  image_model_settings.py  input_settings.py  message_collection.py  notif_settings.py  prompt_block_settings.py  (+4 more)
src/members/: workflow.py
src/system/: agents.py  apis.py  blocks.py  config.py  modules.py  roles.py  tools.py  venvs.py
src/utils/: filesystem.py  helpers.py  messages.py  reset.py  resources.qrc  resources_rc.py  sql.py  sql_upgrade.py  youtube.py
(+146 files in other folders)
