[tool.poetry]
name = "src"
version = "0.6.0"
description = "Create, manage, and chat with AI workflows"
authors = ["jbexta <agentpilot.ai@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
# sounddevice > audio
python = ">=3.11,<3.12"
PySide6 = "6.4.3"
qasync = "^0.27.1"
# numpy = "<2.0.0"
openai = "2.2.0"
litellm = "1.77.7"
# instructor = "1.11.3"
docker = "7.1.0"
mistune = "^3.0.2"
posthog = "^3.5.0"
keyring = "^25.5.0"
#realtime-ai = {url = "https://github.com/jhakulin/realtime-ai/releases/download/v0.1.0/realtime_ai-0.1.0-py3-none-any.whl"}
elevenlabs = "^1.57.0"
pyautogui = "^0.9.54"
coingecko-sdk = "^1.0.0"
mysql-connector-python = "^9.4.0"
jinja2 = "^3.1.6"

# Open Interpreter dependencies
astor = "^0.8.1"
git-python = "^1.0.3"
inquirer = "^3.1.3"
pyyaml = "^6.0.1"
rich = "^13.4.2"
six = "^1.16.0"
tokentrim = "^0.1.13"
wget = "^3.2"
psutil = "^5.9.6"
pyreadline3 = {version = "^3.4.1", markers = "sys_platform == 'win32'"}
html2image = "^2.0.4.3"
send2trash = "^1.8.2"
ipykernel = "^6.26.0"
jupyter-client = "^8.6.0"
matplotlib = "^3.8.2"
toml = "^0.10.2"
tiktoken = "^0.7.0"
platformdirs = "^4.2.0"
pydantic = "^2.6.4"
google-generativeai = "^0.7.1"
pyperclip = "^1.9.0"
yaspin = "^3.0.2"
shortuuid = "^1.0.13"
# litellm = "^1.41.26"
# starlette = "^0.37.2"
html2text = "^2024.2.26"
selenium = "^4.24.0"
webdriver-manager = "^4.0.2"
anthropic = "^0.37.1"
typer = "^0.12.5"
fastapi = "^0.115.2"
uvicorn = "^0.30.1"

## Calligrapher dependencies
#torch = "2.5.0"
#torchvision = "0.20.0"
#diffusers = "0.33.0"
#transformers = "4.49.0"
#Pillow = "11.0.0"
#opencv-python = "4.11.0.86"
#accelerate = "0.30.1"
#gradio = "5.23.3"
#protobuf = "^4.25.0"
#sentencepiece = "0.2.0"
#numpy = "1.26.4"

seolpyo-mplchart = "1.4.1.3"
pyqtgraph = "^0.13.3"
binance-sdk-spot = "^1.2.0"
h5py = "^3.14.0"
claude-code-sdk = "^0.0.22"
yt-dlp = "^2025.9.26"
aiofiles = "^25.1.0"
aiohttp = "^3.13.0"
av = "^16.0.1"
moviepy = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
